gcc/testsuite/rust/rustc/ui/unop-neg-bool.rs
fn main() {
    -true; // { dg-error ".E0600." "" { target *-*-* } }
}

